# Test-preparation-04

./: CMakeLists.txt  GUI.cpp  GUI.h  Object.cpp  Object.h  Repository.cpp  Repository.h  Service.cpp  Service.h
